--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -66,7 +66,13 @@
     <!--========================================================== -->
                         <!-- SLIDER DE IMAGENES-->
     <!--========================================================== -->
-   
+    
+    <div class="carrousel-container">
+        <div class="carousel-text">
+          <h3 class="text-pasion"><em>Pura pasión</em></h3>
+          <h1 class="text-title">REVISA TUS TIEMPOS</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam adipisci velit reprehenderit vero atque. Laudantium nemo magni laboriosam libero nam at nesciunt, consectetur sunt, nostrum expedita maiores, blanditiis deleniti possimus?</p>
+        </div>
     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
@@ -94,6 +100,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
 
     <!--========================================================== -->
                         <!-- INTRODUCCION DE SERVICIOS-->
