Se ajusta banner contenedor

--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -69,24 +69,24 @@
     
     <div class="carrousel-container">
         <div class="carousel-text">
-          <h3 class="text-pasion"><em>Pura pasión</em></h3>
+          <h2 class="text-pasion"><em><b>Pura pasión</b></em></h2>
           <h1 class="text-title">REVISA TUS TIEMPOS</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam adipisci velit reprehenderit vero atque. Laudantium nemo magni laboriosam libero nam at nesciunt, consectetur sunt, nostrum expedita maiores, blanditiis deleniti possimus?</p>
         </div>
-    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="carousel" class="carousel slide bg-dark" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./img/slide1.jpg" class="d-block w-100" alt="">
+            <img src="img/carrera-del-alma.png" class="d-block w-100" alt="">
           </div>
           
  
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
+            <img src="img/san-andres-challenge.png" class="d-block w-100" alt="...">
           </div>
  
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/slide3.jpg" class="d-block w-100" alt="...">
+            <img src="img/carrera-atletica-funza.png" class="d-block w-100" alt="...">
           </div>
  
  
