--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="icon" href="img/Icono-PuraVida.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -52,44 +53,36 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Fotos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#seccion-contacto">Contactos</a>
-              </li>
             </ul>
             <form class="d-flex">
-              <a class="nav-link" href="#seccion-contacto">Contactos</a>
+              <a class="nav-link" href="#">Contactos</a>
             </form>
           </div>
-
         </div>
       </nav>
+
     <!--========================================================== -->
                         <!-- SLIDER DE IMAGENES-->
     <!--========================================================== -->
-    
-    <div class="carrousel-container">
-        <div class="carousel-text">
-          <h2 class="text-pasion"><em><b>Pura pasión</b></em></h2>
-          <h1 class="text-title">REVISA TUS TIEMPOS</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam adipisci velit reprehenderit vero atque. Laudantium nemo magni laboriosam libero nam at nesciunt, consectetur sunt, nostrum expedita maiores, blanditiis deleniti possimus?</p>
-        </div>
-    <div id="carousel" class="carousel slide bg-dark" data-bs-ride="carousel">
+    <section>
+      <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="img/carrera-del-alma.png" class="d-block w-100" alt="">
+            <img src="./img/slide1.jpg" class="d-block w-100" alt="">
           </div>
-          
- 
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="img/san-andres-challenge.png" class="d-block w-100" alt="...">
-          </div>
- 
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="img/carrera-atletica-funza.png" class="d-block w-100" alt="...">
+            <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
           </div>
- 
- 
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="./img/ciclismo.png" class="d-block w-100" alt="...">
+          </div>
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="./img/ciclismo2.jpg" class="d-block w-100" alt="...">
+          </div>
+
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -100,7 +93,62 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+      <div class="Text-banner">
+        <h2 class="text-one">Pura Pasión</h2>
+        <h1 class="text-two">REVISA TUS TIEMPOS</h1>
+        <p class="text-body-banner">when an unknown printer took a galley of type and scrambled it to make a type specimen book <br/>
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, type specimen book<br/>
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+      </div>
+      <div class="slider-menu">
+        <div class="slider">
+          <div class="slide-track">
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_3.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_4.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_5.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_6.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_7.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_8.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_9.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_10.jpeg" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+              <img src="./img/Marca_carrera_Slider_11.jpeg" height="100" width="250" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--========================================================== -->
+                        <!-- Btn whatsapp-->
+    <!--========================================================== -->
+
+    <a href="https://wa.me/5211234567890?text=Me%20gustaría%20saber%20el%20precio%20del%20coche" class="whatsapp" target="_blank">
+      <i class="fa fa-whatsapp whatsapp-icon"></i>
+    </a>
 
     <!--========================================================== -->
                         <!-- INTRODUCCION DE SERVICIOS-->
@@ -162,14 +210,14 @@
     </div>
 </section>
 
-<section class="parallaxApp">
-  <div class="parallaxPosition">
-      <div class="text-parallax textBlack">
-          <h2>Using the latest technology for apps</h2>
-          <h3>In Parexton we make it faster</h3>
+<section class="parallaxHome2">
+  <div class="parallax-component">
+      <div class="text-parallax">
+          <h2 class="text-parrafo">Día del evento.</h2>
+          <h3 class="text-parrafo">Our commitment</h3>
       </div>
       <div class="text2-parallax">
-           <h4>LEARN MORE</h4>
+          <h4 class="text-footer">Pura pasión</h4>
       </div>
   </div>
 </section>
@@ -185,32 +233,36 @@
     </div>
 
     <div id="local" class="border-top border-2">
-        <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d114661.24405186923!2d-80.3218444!3d26.0935687!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sco!4v1569503893562!5m2!1sen!2sco" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <div class="row">
+        <h1 class="textcontacto">Proxima evento, Bogota</h1>
+        <div class="col mapa-order">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d114661.24405186923!2d-80.3218444!3d26.0935687!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sco!4v1569503893562!5m2!1sen!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
-        <div>
-            <div class="wrapper-local">
-                <h2>Ubicado en Miami, Florida</h2>
-                <h2 class="text-primary mb-4" id="typewriter"></h2>
-                <p class="fs-5 text-body">Elijimos Miami para nuestra oficina con el objetivo de estar cerca a nuestros clientes. Estamos ubicados en Brickell, el corazon y el centro financiero de Miami, cerca de los mejores restaurantes, tiendas y tan solo 15 minutos de las playas. ¡Visitennos y no se arrepentiran!</p>
-                <section class="d-flex justify-content-start" id="numeros-local">
-                    <div>
-                        <p class="text-primary fs-5">200</p>
-                        <p>Dias de Sol</p>
-                    </div>
-                    <div>
-                        <p class="text-primary fs-5">100%</p>
-                        <p>Aprobado</p>
-                    </div>
-                    <div>
-                        <p class="text-primary fs-5">24 °C</p>
-                        <p>Temperatura</p>
-                    </div>
+        <div class="col">
+          <div class="wrapper-local">
+            <h2>Colombia, Bogota</h2>
+            <h2 class="text-primary mb-4" id="typewriter"></h2>
+            <p class="fs-5 text-body">proxima carrera consulta toda la informacion y conoce nuestras nuevas propuestas,
+                Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo para este reto,
+                te esperamos para que te unas a nosotros.
+            </p>
+              <section class="d-flex justify-content-start" id="numeros-local">
+                <div>
+                    <p class="text-primary fs-5">200</p>
+                    <p>Dias de Sol</p>
+                </div>
+                <div>
+                    <p class="text-primary fs-5">100%</p>
+                    <p>Aprobado</p>
+                </div>
+                <div>
+                    <p class="text-primary fs-5">24 °C</p>
+                    <p>Temperatura</p>
+                </div>
               </section>
-            </div>
-        </div>
+          </div>
+      </div>
     </div>
-
 </section>
 
 
