Se ajustar section de cards

--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -154,9 +154,69 @@
                         <!-- INTRODUCCION DE SERVICIOS-->
     <!--========================================================== -->
 
+    <section class="container">
+      <div class="row m-0">
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/cronometraje.png"/>
+              <h5 class="card-title">Cronometraje</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/eventos.png"/>
+              <h5 class="card-title">Eventos</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/camisetas.png"/>
+              <h5 class="card-title">Camisetas</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row m-0">
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/numeros.png"/>
+              <h5 class="card-title">Numeración</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/medallas.png"/>
+              <h5 class="card-title">Medallas</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-image" src="./img/trofeos.png"/>
+              <h5 class="card-title">Trofeos</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
-    <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span/></h1>
+    <h1 class="">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span/></h1>
      <p class="p-3  fs-4">
          <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO, paginas WEB, tiendas virtuales, redes sociales        
      </p>   
