--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -71,7 +71,7 @@
             <img src="./img/slide1.jpg" class="d-block w-100" alt="">
           </div>
 
-          <div class="carousel-item" data-bs-interval="3000">
+          <!-- <div class="carousel-item" data-bs-interval="3000">
             <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
           </div>
 
@@ -81,61 +81,61 @@
 
           <div class="carousel-item" data-bs-interval="3000">
             <img src="./img/ciclismo2.jpg" class="d-block w-100" alt="...">
-          </div>
+          </div> -->
 
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
+        <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carousel"  data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> -->
       </div>
       <div class="Text-banner">
         <h2 class="text-one">Pura Pasión</h2>
         <h1 class="text-two">REVISA TUS TIEMPOS</h1>
-        <p class="text-body-banner">when an unknown printer took a galley of type and scrambled it to make a type specimen book <br/>
+        <!-- <p class="text-body-banner">when an unknown printer took a galley of type and scrambled it to make a type specimen book <br/>
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, type specimen book<br/>
             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
+        </p> -->
       </div>
       <div class="slider-menu">
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_1.png" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_1.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_2.png" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_2.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_3.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_3.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_4.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_4.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_5.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_5.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_6.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_6.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_7.png" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_7.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_8.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_8.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_9.png" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_9.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_10.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_10.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_11.jpeg" height="100" width="250" alt="" />
+              <img src="./img/Marca_carrera_Slider_11.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
             </div>
           </div>
         </div>
@@ -153,6 +153,13 @@
     <!--========================================================== -->
                         <!-- INTRODUCCION DE SERVICIOS-->
     <!--========================================================== -->
+
+    <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
+    <h1 class="">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span/></h1>
+     <p class="p-3  fs-4">
+         <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO, paginas WEB, tiendas virtuales, redes sociales        
+     </p>   
+    </section>
 
     <section class="container">
       <div class="row m-0">
@@ -213,13 +220,6 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
-    <h1 class="">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span/></h1>
-     <p class="p-3  fs-4">
-         <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO, paginas WEB, tiendas virtuales, redes sociales        
-     </p>   
     </section>
 
    <!--========================================================== -->
