--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -154,11 +154,41 @@
                         <!-- INTRODUCCION DE SERVICIOS-->
     <!--========================================================== -->
 
-    <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
-    <h1 class="">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span/></h1>
-     <p class="p-3  fs-4">
-         <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO, paginas WEB, tiendas virtuales, redes sociales        
-     </p>   
+    <section class="d-flex flex-column justify-content-center align-items-center text-center w-50 m-auto" id="intro">
+      <h5>ExpertD deportes y juegos</h5> 
+      <h1 class="text-body" style="font-weight: bold;">Inscribete</h1>
+       <p >
+        <span class="text-secondary">survived not only five centuries, but also the leap into electronic typesetting, remaining
+          essentially unchanged.
+       </p> 
+     
+     <section class="container" style="margin-bottom: 5vh;">
+      <div class="row m-0">
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img" src="./img/card-1.jpg"/>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img" src="./img/card-2.webp"/>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 p-0">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img" src="./img/card-3.png"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     </section>
 
     <section class="container">
@@ -330,9 +360,9 @@
                         <!-- SECCION CONTACTOS-->
 <!--========================================================== -->
 
-<section id="seccion-contacto" class="border-bottom border-secondary border-2">
+<section id="seccion-contacto">
   <div id="bg-contactos">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1b2a4e" fill-opacity="1" d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
   </div>
 
 
