Section cards añadida

--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -161,65 +161,90 @@
      </p>   
     </section>
 
-    <section class="container">
-      <div class="row m-0">
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/cronometraje.png"/>
-              <h5 class="card-title">Cronometraje</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <section class="container banner-section m-0">
+      <section class="banner-pink row">
+        <div class="col-2 banner-img">
+          <img class="banner-image" src="./img/carreras.jpg"/>
+        </div>
+        <div class="col-2 banner-img">
+          <img class="banner-image" src="./img/meta.png"/>
+        </div>
+        <div class="col-2 banner-img">
+          <img class="banner-image" src="./img/ruta.jpg"/>
+        </div>
+        <div class="col-2 banner-img">
+          <img class="banner-image2" src="./img/tiempos.jpg"/>
+        </div>
+      </section>
+      <section class="container banner-container pt-3">
+        <h5>Para tus eventos</h5>
+        <h3 class="cards-title">Todos los servicios</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel hic doloremque repudiandae facere ra quis placeat!</p>
+        <section class="container cards-banner">
+          <div class="card-row row m-0">
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/cronometraje.png"/>
+                  <h5 class="card-title">Cronometraje</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/eventos.png"/>
+                  <h5 class="card-title">Eventos</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/camisetas.png"/>
+                  <h5 class="card-title">Camisetas</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/eventos.png"/>
-              <h5 class="card-title">Eventos</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <div class="row m-0">
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/numeros.png"/>
+                  <h5 class="card-title">Numeración</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/medallas.png"/>
+                  <h5 class="card-title">Medallas</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 p-0">
+              <div class="card">
+                <div class="card-body">
+                  <img class="card-image" src="./img/trofeos.png"/>
+                  <h5 class="card-title">Trofeos</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/camisetas.png"/>
-              <h5 class="card-title">Camisetas</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row m-0">
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/numeros.png"/>
-              <h5 class="card-title">Numeración</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/medallas.png"/>
-              <h5 class="card-title">Medallas</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 p-0">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-image" src="./img/trofeos.png"/>
-              <h5 class="card-title">Trofeos</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+        </section>
+      </section>
+
+      <section class="banner-black row">
+      </section>
+
     </section>
 
    <!--========================================================== -->
