se añade footer

--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -437,12 +437,27 @@
 <!--========================================================== -->
 
 
-<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
-  <p class="fs-5 px-3  pt-3">ExpertD. &copy; Todos Los Derechos Reservados 2021</p>
-  <div id="iconos" >
+<footer class="row">
+  <div class="col-4 footer-col1">
+    <img src="./img/app-logo.png" alt="app-logo">
+    <p>Términos & condiciones</p>
+  </div>
+  <div class="col-4 footer-col2">
+    <div id="iconos" class="iconos">
       <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>  
+      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#"><i class="bi bi-linkedin"></i></a>
+    </div>
+    <div class="copyright">
+      <span class="border-end">Copyright &copy; 2021</span>
+      <span>All rights reserved.</span>
+    </div>
+  </div>
+  <div class="col-4 footer-col3">
+    <div class="contact-us">
+      <span><i class="fa fa-phone"></i> Contactanos </span>
+      <span>PQR</span>
+    </div>
   </div>
 </footer>
 
