--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -55,7 +55,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <a class="nav-link" href="#">Contactos</a>
+              <a class="nav-link" href="#"><i class="fa fa-envelope" aria-hidden="true"> &nbsp;</i>Contactos</a>
             </form>
           </div>
         </div>
@@ -68,7 +68,7 @@
       <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./img/slide1.jpg" class="d-block w-100" alt="">
+            <img src="./img/carrera-deporte.jpg" class="d-block w-100" alt="">
           </div>
 
           <!-- <div class="carousel-item" data-bs-interval="3000">
@@ -285,51 +285,51 @@
 <section class="w-100">
     <div class="row w-75 mx-auto" id="servicios-fila-1">       
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <img src="./img/desarrollo.png" alt="desarrollo"   width="180" height="160">
+            <img src="./img/tarjeta_1.jpg" class="img-card" alt="desarrollo"   width="180" height="160">
 
             <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1">Desarrollo</h3>
-                <p class="px-4">Desarrollo de aplicaciones WEB, moviles y ecommerce</p>
+                <h5 class="fs-5 mt-4 px-4 pb-1">Tiempos electrónicos</h5>
+                <p class="body-text-card">Lorem Ipsum is simply dummy text of the printing and industry.</p>
             </div>
 
         </div>
 
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start  my-5 icono-wrap">
-            <img src="./img/concepto.png" alt="concepto" width="180" height="160">
+            <img src="./img/tarjeta_2.jpg" class="img-card" alt="concepto" width="180" height="160">
 
             <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1 icono-wrap">Branding</h3>
-                <p class="px-4">Diseño, Conceptualización e Implementación de productos digitales</p>
+                <h5 class="fs-5 mt-4 px-4 pb-1 icono-wrap">Cronometraje deportivo</h5>
+                <p class="body-text-card">Lorem Ipsum is simply dummy text of the printing and industry.</p>
             </div>
         </div>   
     </div>
     
     <div class="row w-75 mx-auto mb-5" id="servicios-fila-2">       
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start  my-5 icono-wrap">
-            <img src="./img/comunicaciones.png" alt="comunicaciones" width="180" height="160">
+            <img src="./img/ciclismo.jpg"class="img-card" alt="comunicaciones" width="180" height="160">
 
             <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1">Comunicaciones</h3>
-                <p class="px-4">Desarrollo  del plan de comunicaciones para sus clientes.</p>
+                <h5 class="fs-5 mt-4 px-4 pb-1">Cronometraje electronico</h5>
+                <p class="body-text-card">Lorem Ipsum is simply dummy text of the printing and industry.</p>
             </div>
         </div>
 
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <img src="./img/seo.png" alt="seo" width="180" height="160" >
+            <img src="./img/tarjeta_3.jpg" class="img-card" alt="seo" width="180" height="160" >
 
             <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1">SEO</h3>
-                <p class="px-4">Analizamos la eficiencia y optimizamos los sitios WEB</p>
+                <h5 class="fs-5 mt-4 px-4 pb-1">Eventos deportivos</h5>
+                <p class="body-text-card">Lorem Ipsum is simply dummy text of the printing and industry.</p>
             </div>
-        </div>   
+        </div>
     </div>
 </section>
 
 <section class="parallaxHome2">
   <div class="parallax-component">
       <div class="text-parallax">
-          <h2 class="text-parrafo">Día del evento.</h2>
-          <h3 class="text-parrafo">Our commitment</h3>
+          <h2 class="text-parrafo">Toma de tiempos</h2>
+          <h3 class="text-parrafo">Eventos deportivos</h3>
       </div>
       <div class="text2-parallax">
           <h4 class="text-footer">Pura pasión</h4>
@@ -337,14 +337,14 @@
   </div>
 </section>
 
-<section>
+<section> 
     <div class="container w-50 m-auto text-center" id="equipo">
-        <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados Grandes</span>.</h1>
-        <p class="fs-4 ">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo para este reto, te esperamos para que te unas a nosotros.</p>
+      <h5 class="mt-5">Tu esfuerzo en</h5> 
+      <h1 class="text-body" style="font-weight: bold;">Imagenes</h1>
     </div>
 
     <div class="mt-5 text-center">
-        <img id="img-equipo" src="./img/equipo.jpg" alt="equipo">
+        <img id="img-equipo" src="./img/collage_ciclismo.png" alt="equipo">
     </div>
 
     <div id="local" class="border-top border-2">
