--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -68,7 +68,7 @@
       <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./img/carrera-deporte.jpg" class="d-block w-100" alt="">
+            <img src="./img/banner-principal-black.jpg" class="d-block w-100" alt="">
           </div>
 
           <!-- <div class="carousel-item" data-bs-interval="3000">
@@ -105,37 +105,37 @@
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_1.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_1.png" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_2.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_2.png" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_3.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_3.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_4.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_4.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_5.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_5.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_6.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_6.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_7.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_7.png" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_8.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_8.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_9.png" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_9.png" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_10.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_10.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
             <div class="slide">
-              <img src="./img/Marca_carrera_Slider_11.jpeg" style="margin-top: -3rem;" height="190" width="300" alt="" />
+              <img src="./img/Marca_carrera_Slider_11.jpeg" style="margin-top: -3rem;" height="200" width="310" alt="" />
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
                 <div class="card-body">
                   <img class="card-image" src="./img/cronometraje.png"/>
                   <h5 class="card-title">Cronometraje</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing  additional content.</p>
                 </div>
               </div>
             </div>
