--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -340,34 +340,61 @@
   </div>
 </section>
 
-<section class="carrousel-container">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="./img/app-logo.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+<section class="container-a-us">
+  <h2 class="title-a-us text-center">PURA VIDA SPORT</h2>
+  <div class="about-us">
+    <p>
+      Es un equipo de especialistas en cronometraje deportivo en Colombia que ofrece lo mejor en productos y servicios.
+    </p>
+    <p>
+      Hemos ocupado una posición destacada dentro de la industria del cronometraje durante más de una década, brindando apoyo profesional y recursos para todo tipo de eventos.
+    </p>
+    <p>
+      Nos enorgullecemos de asegurarnos de que sus tiempos y resultados sean exactos, confiables y precisos. Sabemos todo acerca de sus nervios el día de la carrera y sabemos de primera mano lo estresante que puede ser. Estamos aquí para aliviar esta presión; ayudándolo a decidir qué productos necesita, así como cualquier consulta previa al evento y soporte el día del evento.
+    </p>
+    <p>
+      Ninguna carrera es demasiado grande o demasiado pequeña. Conocemos nuestros productos por dentro y por fuera, y trabajaremos en estrecha colaboración con usted para ayudarlo a seleccionar los productos adecuados para su evento. Nos hemos asociado con las mejores marcas, ofreciendo una amplia gama de sistemas de cronometraje que se adaptan a todos los presupuestos, para garantizar que obtenga resultados óptimos.
+    </p>
+    <p>
+      Todos los eventos deportivos son muy diferentes y sabemos que los sistemas de cronometraje varían mucho para las diferentes carreras. Es por eso que, el 97% de las veces, las personas se comunican con nosotros para solicitar asesoramiento antes de su evento.
+    </p>
+    <p>
+      Alejandro Pineda socio – fundador es deportista aficionado hace más de 30 años y entiende la importancia de los resultados para cualquier participante y también para el sector comercial donde los resultados y los datos se utilizan para garantizar que los eventos se desarrollen de la mejor manera.
+    </p>
   </div>
 </section>
+
+<!-- <section class="carrousel-container">
+  <h3>Preguntas frecuentes</h3>
+  <div id="carousel-text" class="carousel slide bg-danger" data-bs-ride="carousel">
+    <div class="carousel-inner car-text">
+      <div class="carousel-item active">
+        <h3></h3>
+        <p>PRIMER TEXTO</p>
+      </div>
+
+      <div class="carousel-item">
+        <p>SEGUNDO TEXTO</p>
+      </div>
+
+      <div class="carousel-item">
+        <p>TERCER TEXTO</p>
+      </div>
+
+      <div class="carousel-item">
+        <p>CUARTO TEXTO</p>
+      </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-text"  data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel-text"  data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section> -->
 
 <section> 
     <div class="container w-50 m-auto text-center" id="equipo">
