--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -341,7 +341,7 @@
 </section>
 
 <section class="container-a-us">
-  <h2 class="title-a-us text-center">PURA VIDA SPORT</h2>
+  <h2 class="title-a-us text-center cssFont_1" style="font-family:'Dancing Script', cursive">PURA VIDA SPORT</h2>
   <div class="about-us">
     <p>
       Es un equipo de especialistas en cronometraje deportivo en Colombia que ofrece lo mejor en productos y servicios.
@@ -361,6 +361,12 @@
     <p>
       Alejandro Pineda socio – fundador es deportista aficionado hace más de 30 años y entiende la importancia de los resultados para cualquier participante y también para el sector comercial donde los resultados y los datos se utilizan para garantizar que los eventos se desarrollen de la mejor manera.
     </p>
+    <div class="d-flex flex-column">
+      <p><a href="#">Como usar los chips</a></p>
+      <p><a href="#">Preguntas frecuentes </a></p>
+      <p><a href="#">Clientes y aliados</a></p>
+      <p><a href="#">Pinta para tu evento PURA VIDA</a></p>
+    </div>
   </div>
 </section>
 
@@ -397,15 +403,6 @@
 </section> -->
 
 <section> 
-    <div class="container w-50 m-auto text-center" id="equipo">
-      <h5 class="mt-5 cssFont_1 texto-inscribite" style="font-size: 1.6rem; font-family:'Dancing Script', cursive">Tu esfuerzo en</h5> 
-      <h1 class="text-body" style="font-weight: bold;">Imagenes</h1>
-    </div>
-
-    <div class="mt-5 text-center">
-        <img id="img-equipo" src="./img/collage_ciclismo.png" alt="equipo">
-    </div>
-
     <div id="local" class="border-top border-2">
       <div class="row">
         <h1 class="textcontacto">Proxima evento, Bogota</h1>
@@ -489,7 +486,16 @@
   </div>
 </section>
 
+<section style="background:#f3f3f3;">
+  <div class="container w-50 m-auto text-center" id="equipo">
+    <h5 class="mt-5 cssFont_1 texto-inscribite" style="font-size: 1.6rem; font-family:'Dancing Script', cursive">Tu esfuerzo en</h5> 
+    <h1 class="text-body" style="font-weight: bold;">Imagenes</h1>
+  </div>
 
+  <div class="mt-5 text-center">
+      <img id="img-equipo" src="./img/collage_ciclismo.png" alt="equipo" style="margin-bottom: 4vh;">
+  </div>
+</section>
 <!--========================================================== -->
                         <!--FOOTER-->
 <!--========================================================== -->
