--- a/PuraVida/index.html
+++ b/PuraVida/index.html
@@ -483,7 +483,7 @@
               <section class="d-flex justify-content-start" id="numeros-local">
                 <div>
                     <p class="text-primary fs-5">200</p>
-                    <p>Dias de Sol</p>
+                    <p>Sol</p>
                 </div>
                 <div>
                     <p class="text-primary fs-5">100%</p>
@@ -516,7 +516,7 @@
 
   <div class="container  border-top border-primary" style="max-width: 500px" id="contenedor-formulario">
       <div class="text-center mb-4" id="titulo-formulario">
-        <div><img src="./img/logoPuraVida.png" style="width: 30vw;" alt="" class="img-fluid"></div>
+        <div><img src="./img/logoPuraVida.png" alt="" class="img-fluid img-logo"></div>
         <h2 class="text-contact">Contactanos</h2>
         <p class="fs-5">Estamos aqui para hacer realidad de tus proyectos</p>
       </div>
@@ -566,7 +566,7 @@
 
 <footer class="row">
   <div class="col-4 footer-col1">
-    <img src="./img/app-logo.png" alt="app-logo">
+    <img class="imgFooterLogo" src="./img/app-logo.png" alt="app-logo">
     <p>Términos & condiciones</p>
   </div>
   <div class="col-4 footer-col2">
